--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <!-- header -->
     <header class="header">
       <div class="header-1">
-        <a href="#" class="logo"><i class="fas fa-book"></i>sublibreria</a>
+        <a href="#" class="logo"
+          ><i class="fas fa-book"></i>Elsie Maria Mojica De Los Santos</a
+        >
 
         <form action="" class="search-form">
           <input
