--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-1">
         <a href="#" class="logo"
-          ><i class="fas fa-book"></i>Elsie Maria Mojica De Los Santos</a
+          ><i class="fas fa-book"></i>La Pagina Izquierda</a
         >
 
         <form action="" class="search-form">
@@ -62,5 +62,38 @@
       <a href="#blogs" class="fas fa-bookmark"></a>
     </nav>
     <script src="js/script.js"></script>
+
+    <!-- login -->
+
+    <div class="login-form-container">
+      <div id="close-login-btn" class="fas fa-times"></div>
+
+      <form action="">
+        <h3>sign in</h3>
+        <span>username</span>
+        <input
+          type="email"
+          name=""
+          class="box"
+          placeholder="enter your email"
+          id=""
+        />
+        <span>password</span>
+        <input
+          type="password"
+          name=""
+          class="box"
+          placeholder="enter your password"
+          id=""
+        />
+        <div class="checkbox">
+          <input type="checkbox" name="" id="remember-me" />
+          <label for="remember-me"> remember me</label>
+        </div>
+        <input type="submit" value="sign in" class="btn" />
+        <p>forget password ? <a href="#">click here</a></p>
+        <p>don't have an account ? <a href="#">create one</a></p>
+      </form>
+    </div>
   </body>
 </html>
