--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Pagina Izquierda</title>
 
+    <!--cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+
     <!-- font -->
     <link
       rel="stylesheet"
@@ -61,7 +67,6 @@
       <a href="#reviews" class="fas fa-star-half"></a>
       <a href="#blogs" class="fas fa-bookmark"></a>
     </nav>
-    <script src="js/script.js"></script>
 
     <!-- login -->
 
@@ -95,5 +100,53 @@
         <p>don't have an account ? <a href="#">create one</a></p>
       </form>
     </div>
+
+    <!-- home section starts -->
+    <div class="home-container">
+      <section class="home" id="home">
+        <div class="row">
+          <div class="content">
+            <h3>upto 75% off</h3>
+            <p>
+              Lorem ipsum dolor sit amet cconsecteur adipisicing elit. Magnam
+              deserunt nostrum accusamus. Nam alias sit necessitatibus, aliquid
+              ex minima at!
+            </p>
+            <a href="#" class="btn">shop now</a>
+          </div>
+          <div class="swiper book-slider">
+            <div class="swiper-wrapper">
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-1.png" alt=""</a
+              >
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-2.png" alt=""</a
+              >
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-3.png" alt=""</a
+              >
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-4.png" alt=""</a
+              >
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-5.png" alt=""</a
+              >
+              <a href="#" class="swiper-slide"
+                ><img src="image/book-6.png" alt=""</a
+              >
+            </div>
+            <img src="image/stand.png" class="stand" alt="" />
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- home section ense -->
+
+    <!-- cdn script-->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- js script-->
+    <script src="js/script.js"></script>
   </body>
 </html>
