--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <input
             type="search"
             name=""
-            placeholder="search here..."
+            placeholder="busca aquí..."
             id="search-box"
           />
           <label for="search-box" class="fa fa-search"></label>
@@ -42,10 +42,10 @@
 
       <div class="header-2">
         <nav class="navbar">
-          <a href="#home">home</a>
-          <a href="#featured">featured</a>
-          <a href="#arrivals">arrivals</a>
-          <a href="#reviews">reviews</a>
+          <a href="#home">menu</a>
+          <a href="#featured">recomendados</a>
+          <a href="#arrivals">nuevos</a>
+          <a href="#reviews">reseñas</a>
           <a href="#blogs">blogs</a>
         </nav>
       </div>
@@ -68,30 +68,30 @@
       <div id="close-login-btn" class="fas fa-times"></div>
 
       <form action="">
-        <h3>sign in</h3>
-        <span>username</span>
+        <h3>Inicia Sesión</h3>
+        <span>usuario</span>
         <input
           type="email"
           name=""
           class="box"
-          placeholder="enter your email"
+          placeholder="ingresa tu email"
           id=""
         />
-        <span>password</span>
+        <span>contraseña</span>
         <input
           type="password"
           name=""
           class="box"
-          placeholder="enter your password"
+          placeholder="ingresa tu contraseña"
           id=""
         />
         <div class="checkbox">
           <input type="checkbox" name="" id="remember-me" />
-          <label for="remember-me"> remember me</label>
+          <label for="remember-me"> recuérdame</label>
         </div>
-        <input type="submit" value="sign in" class="btn" />
-        <p>forget password ? <a href="#">click here</a></p>
-        <p>don't have an account ? <a href="#">create one</a></p>
+        <input type="submit" value="iniciar sesión" class="btn" />
+        <p>olvidaste tu contraseña ? <a href="#">pulsa aquí</a></p>
+        <p>no tienes una cuenta ? <a href="#">crea una</a></p>
       </form>
     </div>
 
@@ -100,7 +100,7 @@
     <section class="home" id="home">
       <div class="row">
         <div class="content">
-          <h3>upto 75% off</h3>
+          <h3>Hasta 75% menos</h3>
           <p>Lorem ipsum dolor sit amet cconsecteur adipisicing elit. Magnam deserunt nostrum 
           accusamus. Nam alias sit necessitatibus, aliquid exminima at!</p>
           <a href="#" class="btn">shop now</a>
@@ -120,7 +120,68 @@
       </div>
     </section>
 
-    <!-- home section ense -->
+    <!-- home section ends -->
+
+    <!-- icons section starts -->
+    <section class="icons-container">
+
+      <div class="icons">
+        <i class="fas fa-plane"></i>
+        <div class="content">
+          <h3>envío gratis</h3>
+          <p>menos de $100</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-lock"></i>
+        <div class="content">
+          <h3>pago seguro</h3>
+          <p>$100 de seguro de pago</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-redo-alt"></i>
+        <div class="content">
+          <h3>devolución fácil</h3>
+          <p>en menos de 10 días</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-headset"></i>
+        <div class="content">
+          <h3>soporte 24/7</h3>
+          <p>llámanos en cualquier momento</p>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- icons section ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- cdn script-->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
