--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>La Pagina Izquierda</title>
+    <title>The LeftSide</title>
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-1">
         <a href="#" class="logo"
-          ><i class="fas fa-book"></i>La Pagina Izquierda</a
+          ><i class="fas fa-book"></i>The LeftSide</a
         >
 
         <form action="" class="search-form">
