--- a/index.html
+++ b/index.html
@@ -340,8 +340,21 @@
 
     <!-- featured section ends -->
 
+    <!-- newsletter section start -->
+    
+    <section class="newsletter">
 
 
+      <form action="">
+        <h3>suscribete para las ultimas novedades</h3>
+        <input type="email" name="" placeholder="ingresa tu email" id="" class="box">
+        <input type="submit" value="suscribete" class="btn"
+      </form>
+
+
+    </section>
+
+    <!-- newsletter section ends -->
 
 
 
