Add Deals and Reviews Section

--- a/index.html
+++ b/index.html
@@ -552,10 +552,119 @@
 
     <!-- arrivals section ends -->
 
+    <!-- deals section start -->
 
+    <section class="deal">
 
+      <div class="content">
+        <h3>Descuento del dia</h3>
+        <h1>Mas de 50% menos</h1>
+        <p>Lorem ipsum dolor sit amet consecteur, adispisicing elit. Unde persipiciatis in atque dolore tempora quaerat at fuga dolorum natus velit</p>
+        <a href="#" class="btn">compra ahora</a>
+      </div>
 
+      <div class="image">
+        <img src="image/deal-img.jpg" alt="">
+      </div>
 
+    </section>
+
+    <!-- deals section ends -->
+
+    <!-- reviews section starts -->
+
+    <section class="reviews" id="reviews">
+
+      <h1 class="heading"> <span>Opinion de Clientes</span> </h1>
+  
+      <div class="swiper reviews-slider">
+  
+          <div class="swiper-wrapper">
+  
+              <div class="swiper-slide box">
+                  <img src="image/pic-1.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <img src="image/pic-2.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <img src="image/pic-3.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+              <div class="swiper-slide box">
+                  <img src="image/pic-4.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <img src="image/pic-5.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <img src="image/pic-6.png" alt="">
+                  <h3>john deo</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                  </div>
+              </div>
+  
+          </div>
+  
+      </div>
+      
+    </section>
+    
+    <!-- reviews section ends -->
 
 
 
