--- a/index.html
+++ b/index.html
@@ -666,11 +666,144 @@
     
     <!-- reviews section ends -->
 
+    <!-- blogs section starts -->
 
+    <section class="blogs" id="blogs">
 
+      <h1 class="heading"> <span>nuestros blogs</span> </h1>
+  
+      <div class="swiper blogs-slider">
+  
+          <div class="swiper-wrapper">
+  
+              <div class="swiper-slide box">
+                  <div class="image">
+                      <img src="image/blog-1.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>titulo del blog va aquí</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                      <a href="#" class="btn">Lee más</a>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <div class="image">
+                      <img src="image/blog-2.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>titulo del blog va aquí</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                      <a href="#" class="btn">Lee más</a>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <div class="image">
+                      <img src="image/blog-3.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>titulo del blog va aqui</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                      <a href="#" class="btn">Lee más</a>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <div class="image">
+                      <img src="image/blog-4.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>titulo del blog va aquí</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                      <a href="#" class="btn">Lee más</a>
+                  </div>
+              </div>
+  
+              <div class="swiper-slide box">
+                  <div class="image">
+                      <img src="image/blog-5.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>titulo del blog va aquí</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                      <a href="#" class="btn">Lee más</a>
+                  </div>
+              </div>
+  
+          </div>
+  
+      </div>
+  
+    </section>
 
+    <!-- blogs section ends -->
 
+    <!-- footer section start -->
 
+    <section class="footer">
+
+      <div class="box-container">
+  
+          <div class="box">
+              <h3>nuestra ubicación</h3>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> India </a>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> USA </a>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> Rusia </a>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> Francia </a>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> Japón </a>
+              <a href="#"> <i class="fas fa-map-marker-alt"></i> África </a>
+          </div>
+  
+          <div class="box">
+              <h3>links rápidos</h3>
+              <a href="#"> <i class="fas fa-arrow-right"></i> menu </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> recomendados </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> nuevos </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> reseñas </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> blogs </a>
+          </div>
+  
+          <div class="box">
+              <h3>links extra</h3>
+              <a href="#"> <i class="fas fa-arrow-right"></i> info cuenta </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> item ordenados </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> política de privacidad </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> métodos de pago </a>
+              <a href="#"> <i class="fas fa-arrow-right"></i> nuestros servicios </a>
+          </div>
+  
+          <div class="box">
+              <h3>información de contacto</h3>
+              <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
+              <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+              <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
+              <img src="image/worldmap.png" class="map" alt="">
+          </div>
+          
+      </div>
+  
+      <div class="share">
+          <a href="#" class="fab fa-facebook-f"></a>
+          <a href="#" class="fab fa-twitter"></a>
+          <a href="#" class="fab fa-instagram"></a>
+          <a href="#" class="fab fa-linkedin"></a>
+          <a href="#" class="fab fa-pinterest"></a>
+      </div>
+  
+      <div class="credit"> creado por <span>Angel Izquierdo</span> | todos los derechos reservados! </div>
+  
+    </section>
+
+    <!-- footer section ends -->
+
+    <!-- loader -->
+
+    <div class="loader"></div>
+      <div class="cup">
+        <div class="handle"></div>
+      </div>
+    </div>
 
 
 
